package g9.springframework.silkroad.controllers;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import lombok.AllArgsConstructor;

@RestController
@RequestMapping("api/v1/admins")
@AllArgsConstructor
public class AdminController {

}
