package g9.springframework.silkroad.models;

public enum Role {
  ADMIN, MANAGER, CUSTOMER
}
